--- a/anvio/data/misc/KEGG-SNAPSHOTS.yaml
+++ b/anvio/data/misc/KEGG-SNAPSHOTS.yaml
@@ -7,7 +7,7 @@ v2020-04-27:
     hash: b893b7b915cb
     modules_db_version: 1
     no_modeling_data: True
-    no_stray_KOs: True
+    no_nt_KOs: True
     no_binary_relations: True
     no_maps: True
 
@@ -17,7 +17,7 @@ v2020-06-23:
     hash: 4a75508b48aa
     modules_db_version: 2
     no_modeling_data: True
-    no_stray_KOs: True
+    no_nt_KOs: True
     no_binary_relations: True
     no_maps: True
 
@@ -27,7 +27,7 @@ v2020-08-06:
     hash: 8f88ef165f4c
     modules_db_version: 2
     no_modeling_data: True
-    no_stray_KOs: True
+    no_nt_KOs: True
     no_binary_relations: True
     no_maps: True
 
@@ -37,7 +37,7 @@ v2020-12-23:
     hash: 45b7cc2e4fdc
     modules_db_version: 2
     no_modeling_data: True
-    no_stray_KOs: True
+    no_nt_KOs: True
     no_binary_relations: True
     no_maps: True
 
@@ -47,7 +47,7 @@ v2021-12-18:
     hash: 58937b64c44c
     modules_db_version: 3
     no_modeling_data: True
-    no_stray_KOs: True
+    no_nt_KOs: True
     no_binary_relations: True
     no_maps: True
 
@@ -57,7 +57,7 @@ v2022-04-14:
     hash: 666feeac5de2
     modules_db_version: 4
     no_modeling_data: True
-    no_stray_KOs: True
+    no_nt_KOs: True
     no_binary_relations: True
     no_maps: True
 
@@ -67,7 +67,7 @@ v2023-01-10:
     hash: d20a0dcd2128
     modules_db_version: 4
     no_modeling_data: True
-    no_stray_KOs: True
+    no_nt_KOs: True
     no_binary_relations: True
     no_maps: True
 
@@ -77,7 +77,7 @@ v2023-09-18:
     hash: a2b5bde358bb
     modules_db_version: 4
     no_modeling_data: True
-    no_stray_KOs: True
+    no_nt_KOs: True
     no_binary_relations: True
     no_maps: True
 
@@ -86,7 +86,7 @@ v2023-09-22:
     archive_name: KEGG_build_2023-09-22_a2b5bde358bb.tar.gz
     hash: a2b5bde358bb
     modules_db_version: 4
-    no_stray_KOs: True
+    no_nt_KOs: True
     no_binary_relations: True
     no_maps: True
 
@@ -104,7 +104,7 @@ v2024-08-30:
     archive_name: KEGG_build_2024-08-30_6b658b5c4379.tar.gz
     hash: 6b658b5c4379
     modules_db_version: 4
-    no_stray_KOs: True
+    no_nt_KOs: True
 
 v2024-09-29:
     url: https://figshare.com/ndownloader/files/49500822
@@ -128,7 +128,7 @@ v2025-08-07:
 
 # How to add a new KEGG snapshot to this file:
 # 1. download the latest data directly from KEGG by running
-#    `anvi-setup-kegg-data -D --kegg-data-dir ./KEGG -T 5 --include-stray-KOs`
+#    `anvi-setup-kegg-data -D --kegg-data-dir ./KEGG -T 5 --include-nt-KOs`
 # 2. get the hash value and version info from the MODULES.db:
 #    `anvi-db-info ./KEGG/MODULES.db`
 # 3. archive that directory:
