--- a/anvio/workflows/metagenomics/Snakefile
+++ b/anvio/workflows/metagenomics/Snakefile
@@ -122,7 +122,7 @@ rule iu_gen_configs:
     # the input file is marked as 'ancient' so snakemake wouldn't run it
     # just because a new path-to-raw-fastq-files.txt file was created.
     input: ancient(M.get_param_value_from_config(['samples_txt']))
-    output: expand("{DIR}/{sample}.ini", DIR=dirs_dict["QC_DIR"], sample=M.sample_names)
+    output: expand("{DIR}/{readset}.ini", DIR=dirs_dict["QC_DIR"], readset=M.get_sr_readset_ids())
     params:
         dir=dirs_dict["QC_DIR"],
         r1_prefix = M.get_rule_param("iu_gen_configs", "--r1-prefix"),
@@ -139,8 +139,8 @@ def get_raw_fastq(sample):
     return {'r1': r1, 'r2': r2}
 
 
-def get_fastq(sample, zipped=run_gzip_fastqs, post_reference_based_short_read_removal=M.remove_short_reads_based_on_references):
-    ''' return the pair of compressed fastq files for a sample.
+def get_fastq(readset, zipped=run_gzip_fastqs, post_reference_based_short_read_removal=M.remove_short_reads_based_on_references):
+    ''' return the pair of compressed fastq files for a readset.
 
         There are two types of sources for the fastq:
             1. The output of QC.
@@ -156,11 +156,11 @@ def get_fastq(sample, zipped=run_gzip_fastqs, post_reference_based_short_read_re
     if post_reference_based_short_read_removal or M.run_qc:
         # by default, use the output of the reference based short read removal
         if zipped:
-            r1 = os.path.join(dirs_dict["QC_DIR"], sample + fastq_label + "_R1.fastq.gz")
-            r2 = os.path.join(dirs_dict["QC_DIR"], sample + fastq_label + "_R2.fastq.gz")
+            r1 = os.path.join(dirs_dict["QC_DIR"], readset + fastq_label + "_R1.fastq.gz")
+            r2 = os.path.join(dirs_dict["QC_DIR"], readset + fastq_label + "_R2.fastq.gz")
         else:
-            r1 = os.path.join(dirs_dict["QC_DIR"], sample + fastq_label + "_R1.fastq")
-            r2 = os.path.join(dirs_dict["QC_DIR"], sample + fastq_label + "_R2.fastq")
+            r1 = os.path.join(dirs_dict["QC_DIR"], readset + fastq_label + "_R1.fastq")
+            r2 = os.path.join(dirs_dict["QC_DIR"], readset + fastq_label + "_R2.fastq")
         d = {'r1': r1, 'r2': r2}
     else:
         # if no QC and no reference based short read removal is requested, use raw input
@@ -168,7 +168,7 @@ def get_fastq(sample, zipped=run_gzip_fastqs, post_reference_based_short_read_re
         if len(d['r1']) > 1 or len(d['r2']) > 1:
             raise ConfigError('You are skipping QC, but some of your samples (for example %s) are composed of more than 1 pair of fastq files '
                   'this is not allowed. Please first merge all the fastq files corresponding to a single sample (or just use QC, and the '
-                  'merging will be done for you).' % sample)
+                  'merging will be done for you).' % readset)
         d = {'r1': d['r1'][0],
              'r2': d['r2'][0]}
     return d
@@ -181,21 +181,21 @@ def input_for_qc(sample):
     return d
 
 
-qc_output_r1 = os.path.join(dirs_dict["QC_DIR"], "{sample}-QUALITY_PASSED_R1.fastq")
-qc_output_r2 = os.path.join(dirs_dict["QC_DIR"], "{sample}-QUALITY_PASSED_R2.fastq")
+qc_output_r1 = os.path.join(dirs_dict["QC_DIR"], "{readset}-QUALITY_PASSED_R1.fastq")
+qc_output_r2 = os.path.join(dirs_dict["QC_DIR"], "{readset}-QUALITY_PASSED_R2.fastq")
 rule iu_filter_quality_minoche:
     ''' Run QC using iu-filter-quality-minoche '''
     version: 1.0
-    log: dirs_dict["LOGS_DIR"] + "/{sample}-iu_filter_quality_minoche.log"
+    log: dirs_dict["LOGS_DIR"] + "/{readset}-iu_filter_quality_minoche.log"
     # making the config file as "ancient" so QC wouldn't run just because
     # a new config file was produced.
-    input: unpack(lambda wildcards: input_for_qc(wildcards.sample))
+    input: unpack(lambda wildcards: input_for_qc(wildcards.readset))
     output:
         r1 = temp(qc_output_r1) if M.remove_short_reads_based_on_references \
                                 else qc_output_r1,
         r2 = temp(qc_output_r2) if M.remove_short_reads_based_on_references \
                                 else qc_output_r2,
-        stats = dirs_dict["QC_DIR"] + "/{sample}-STATS.txt"
+        stats = dirs_dict["QC_DIR"] + "/{readset}-STATS.txt"
     params:
         ignore_deflines = M.get_rule_param("iu_filter_quality_minoche", "--ignore-deflines"),
         visualize_quality_curves = M.get_rule_param("iu_filter_quality_minoche", "--visualize-quality-curves"),
@@ -242,30 +242,30 @@ def uncompress_fastqs_if_needed(r1, r2, log):
 
 def input_for_remove_short_reads_based_on_references(wildcards):
     d = {}
-    d['bam'] = expand(os.path.join(dirs_dict["MAPPING_DIR"], "{group}", "{sample}.bam"), \
-                      group=list(M.references_for_removal.keys()), sample=wildcards.sample)
-    d.update(get_fastq(wildcards.sample, post_reference_based_short_read_removal=False))
+    d['bam'] = expand(os.path.join(dirs_dict["MAPPING_DIR"], "{group}", "{readset}.bam"), \
+                      group=list(M.references_for_removal.keys()), readset=wildcards.readset)
+    d.update(get_fastq(wildcards.readset, post_reference_based_short_read_removal=False))
     return d
 
 
 gzip_suffix = '.gz' if run_gzip_fastqs else ''
 rule remove_short_reads_based_on_references:
     version: 1.0
-    log: os.path.join(dirs_dict["LOGS_DIR"], "{sample}-remove_short_reads_based_on_references.log")
+    log: os.path.join(dirs_dict["LOGS_DIR"], "{readset}-remove_short_reads_based_on_references.log")
     input: unpack(input_for_remove_short_reads_based_on_references)
     output:
-        ids_to_remove = os.path.join(dirs_dict["QC_DIR"], '{sample}-ids-to-remove.txt'),
+        ids_to_remove = os.path.join(dirs_dict["QC_DIR"], '{readset}-ids-to-remove.txt'),
         # For each one of the four following outputs we have an alternative
         # file name for the case that the user chose dont_remove_just_map
         # These mock files end with '-mock-output'
-        keep1 = os.path.join(dirs_dict["QC_DIR"], "{sample}-FILTERED_R1.fastq" + gzip_suffix) \
-                    if M.remove_short_reads_based_on_references else temp(os.path.join(dirs_dict["QC_DIR"], '{sample}-mock-output1')),
-        remove1 = temp(os.path.join(dirs_dict["QC_DIR"], "{sample}.R1.fastq.removed")) \
-                    if M.remove_short_reads_based_on_references else temp(os.path.join(dirs_dict["QC_DIR"], '{sample}-mock-output2')),
-        keep2 = os.path.join(dirs_dict["QC_DIR"], "{sample}-FILTERED_R2.fastq" + gzip_suffix) \
-                    if M.remove_short_reads_based_on_references else temp(os.path.join(dirs_dict["QC_DIR"], '{sample}-mock-output3')),
-        remove2 = temp(os.path.join(dirs_dict["QC_DIR"], "{sample}.R2.fastq.removed")) \
-                    if M.remove_short_reads_based_on_references else temp(os.path.join(dirs_dict["QC_DIR"], '{sample}-mock-output4')),
+        keep1 = os.path.join(dirs_dict["QC_DIR"], "{readset}-FILTERED_R1.fastq" + gzip_suffix) \
+                    if M.remove_short_reads_based_on_references else temp(os.path.join(dirs_dict["QC_DIR"], '{readset}-mock-output1')),
+        remove1 = temp(os.path.join(dirs_dict["QC_DIR"], "{readset}.R1.fastq.removed")) \
+                    if M.remove_short_reads_based_on_references else temp(os.path.join(dirs_dict["QC_DIR"], '{readset}-mock-output2')),
+        keep2 = os.path.join(dirs_dict["QC_DIR"], "{readset}-FILTERED_R2.fastq" + gzip_suffix) \
+                    if M.remove_short_reads_based_on_references else temp(os.path.join(dirs_dict["QC_DIR"], '{readset}-mock-output3')),
+        remove2 = temp(os.path.join(dirs_dict["QC_DIR"], "{readset}.R2.fastq.removed")) \
+                    if M.remove_short_reads_based_on_references else temp(os.path.join(dirs_dict["QC_DIR"], '{readset}-mock-output4')),
     params:
         delimiter = M.get_param_value_from_config(['remove_short_reads_based_on_references', 'delimiter-for-iu-remove-ids-from-fastq'])
     threads: M.T('remove_short_reads_based_on_references')
@@ -318,7 +318,7 @@ rule gen_report_for_mapping_to_references_for_removal:
     version: 1.0
     log: os.path.join(dirs_dict["LOGS_DIR"], "gen_report_for_mapping_to_references_for_removal.log")
     input:
-        ids_to_remove = expand(os.path.join(dirs_dict["QC_DIR"], '{sample}-ids-to-remove.txt'), sample=M.sample_names),
+        ids_to_remove = expand(os.path.join(dirs_dict["QC_DIR"], '{readset}-ids-to-remove.txt'), readset=SR_READSETS),
     output:
         report_file = os.path.join(dirs_dict["QC_DIR"], "short-read-removal-report.txt")
     params:
@@ -331,7 +331,7 @@ rule gen_report_for_mapping_to_references_for_removal:
 rule gen_qc_report:
     version: 1.0
     log: dirs_dict["LOGS_DIR"] + "/gen_qc_report.log"
-    input: expand(dirs_dict["QC_DIR"] + "/{sample}-STATS.txt", sample=M.sample_names)
+    input: expand(dirs_dict["QC_DIR"] + "/{readset}-STATS.txt", readset=SR_READSETS)
     output: dirs_dict["QC_DIR"] + "/qc-report.txt"
     threads: M.T('gen_qc_report')
     resources: nodes = M.T('gen_qc_report')
@@ -455,13 +455,13 @@ rule merge_fastqs_for_co_assembly:
                 shell("rm %s %s 2>>%s" % (r1, r2, log))
 
 gzip_fastq_output = os.path.join(dirs_dict["QC_DIR"],\
-                                 "{sample}-QUALITY_PASSED_{R}.fastq.gz")
+                                 "{readset}-QUALITY_PASSED_{R}.fastq.gz")
 rule gzip_fastqs:
     ''' Compressing the quality controlled fastq files'''
     version: 1.0
-    log: dirs_dict["LOGS_DIR"] + "/{sample}-{R}-gzip.log"
+    log: dirs_dict["LOGS_DIR"] + "/{readset}-{R}-gzip.log"
     input:
-        fastq = os.path.join(dirs_dict["QC_DIR"], "{sample}-QUALITY_PASSED_{R}.fastq")
+        fastq = os.path.join(dirs_dict["QC_DIR"], "{readset}-QUALITY_PASSED_{R}.fastq")
     output: temp(gzip_fastq_output) if M.remove_short_reads_based_on_references \
                                 else gzip_fastq_output
     threads: M.T('gzip_fastqs')
@@ -708,7 +708,7 @@ rule bowtie:
     input: unpack(input_for_bowtie)
     # setting the output as temp, since we only want to keep the bam file.
     output:
-        sam = temp(dirs_dict["MAPPING_DIR"] + "/{group}/{sample}.sam")
+        sam = temp(dirs_dict["MAPPING_DIR"] + "/{group}/{readset}.sam")
     params:
         bowtie_build_prefix = rules.bowtie_build.params.prefix,
         additional_params = M.get_param_value_from_config(["bowtie", "additional_params"])
@@ -724,11 +724,11 @@ rule bowtie:
 rule samtools_view:
     """ sort sam file with samtools and create a RAW.bam file"""
     version: 1.0
-    log: dirs_dict["LOGS_DIR"] + "/{group}-{sample}-samtools_view.log"
     input: rules.bowtie.output.sam
+    log: dirs_dict["LOGS_DIR"] + "/{group}-{readset}-samtools_view.log"
     params: additional_params = M.get_param_value_from_config(["samtools_view", "additional_params"])
     # output as temp. we only keep the final bam file
-    output: temp(dirs_dict["MAPPING_DIR"] + "/{group}/{sample}-RAW.bam")
+    output: temp(dirs_dict["MAPPING_DIR"] + "/{group}/{readset}-RAW.bam")
     threads: M.T('samtools_view')
     resources: nodes = M.T('samtools_view'),
     shell: "samtools view -bS {input} -o {output} {params.additional_params} >> {log} 2>&1"
@@ -737,11 +737,11 @@ rule samtools_view:
 rule anvi_init_bam:
     """ run anvi-init-bam on RAW bam file to create a bam file ready for anvi-profile"""
     version: 1.0 # later we can decide if we want the version to use the version of anvi'o
-    log: dirs_dict["LOGS_DIR"] + "/{group}-{sample}-anvi_init_bam.log"
+    log: dirs_dict["LOGS_DIR"] + "/{group}-{readset}-anvi_init_bam.log"
     input: rules.samtools_view.output
     output:
-        bam = dirs_dict["MAPPING_DIR"] + "/{group}/{sample}.bam",
-        bai = dirs_dict["MAPPING_DIR"] + "/{group}/{sample}.bam.bai"
+        bam = dirs_dict["MAPPING_DIR"] + "/{group}/{readset}.bam",
+        bai = dirs_dict["MAPPING_DIR"] + "/{group}/{readset}.bam.bai"
     threads: M.T('anvi_init_bam')
     resources: nodes = M.T('anvi_init_bam'),
     shell: "anvi-init-bam {input} -o {output.bam} -T {threads} >> {log} 2>&1"
@@ -779,17 +779,17 @@ rule anvi_profile:
     """ run anvi-profile on the bam file"""
     # setting the rule version to be as the version of the profile database of anvi'o
     version: anvio.__profile__version__
-    log: dirs_dict["LOGS_DIR"] + "/{group}-{sample}-anvi_profile.log"
+    log: dirs_dict["LOGS_DIR"] + "/{group}-{readset}-anvi_profile.log"
     input:
-        bam = dirs_dict["MAPPING_DIR"] + "/{group}/{sample}.bam",
+        bam = dirs_dict["MAPPING_DIR"] + "/{group}/{readset}.bam",
         # marking the contigs.db as ancient in order to ignore timestamps.
         contigs = ancient(M.get_contigs_db_path())
     output:
-        profile = dirs_dict["PROFILE_DIR"] + "/{group}/{sample}/PROFILE.db",
-        AUXILIARY_DATA = dirs_dict["PROFILE_DIR"] + "/{group}/{sample}/AUXILIARY-DATA.db",
-        runlog = dirs_dict["PROFILE_DIR"] + "/{group}/{sample}/RUNLOG.txt"
+        profile = dirs_dict["PROFILE_DIR"] + "/{group}/{readset}/PROFILE.db",
+        AUXILIARY_DATA = dirs_dict["PROFILE_DIR"] + "/{group}/{readset}/AUXILIARY-DATA.db",
+        runlog = dirs_dict["PROFILE_DIR"] + "/{group}/{readset}/RUNLOG.txt"
     params:
-        output_dir = dirs_dict["PROFILE_DIR"] + "/{group}/{sample}",
+        output_dir = dirs_dict["PROFILE_DIR"] + "/{group}/{readset}",
         cluster_contigs = get_cluster_contigs_param,
         sample_name = M.get_rule_param("anvi_profile", "--sample-name"),
         overwrite_output_destinations = "--overwrite-output-destinations",
@@ -1138,11 +1138,11 @@ rule dummy_rule_for_anvi_summarize:
 
 rule krakenuniq:
     version: 1.0
-    log: dirs_dict["LOGS_DIR"] + "/{sample}-krakenuniq.log"
-    input: unpack(lambda wildcards: get_fastq(wildcards.sample))
+    log: dirs_dict["LOGS_DIR"] + "/{readset}-krakenuniq.log"
+    input: unpack(lambda wildcards: get_fastq(wildcards.readset))
     output:
-        raw = os.path.join(dirs_dict["TAXONOMY_DIR"], "{sample}.krakenuniq"),
-        tsv = os.path.join(dirs_dict["TAXONOMY_DIR"], "{sample}-krakenuniq-report.tsv")
+        raw = os.path.join(dirs_dict["TAXONOMY_DIR"], "{readset}.krakenuniq"),
+        tsv = os.path.join(dirs_dict["TAXONOMY_DIR"], "{readset}-krakenuniq-report.tsv")
     params:
         db = M.get_rule_param("krakenuniq", "--db"),
         gzip_compressed = M.get_rule_param("krakenuniq", "--gzip-compressed"),
@@ -1166,9 +1166,9 @@ rule krakenuniq:
 
 rule krakenuniq_mpa_report:
     version: 1.0
-    log: dirs_dict["LOGS_DIR"] + "/{sample}-krakenuniq_mpa_report.log"
-    input: os.path.join(dirs_dict["TAXONOMY_DIR"], "{sample}.krakenuniq"),
-    output: os.path.join(dirs_dict["TAXONOMY_DIR"], "{sample}-krakenuniq.tsv")
+    log: dirs_dict["LOGS_DIR"] + "/{readset}-krakenuniq_mpa_report.log"
+    input: os.path.join(dirs_dict["TAXONOMY_DIR"], "{readset}.krakenuniq"),
+    output: os.path.join(dirs_dict["TAXONOMY_DIR"], "{readset}-krakenuniq.tsv")
     # FIXME: I need to see if more params should be available for krakenuniq_mpa_report
     params: db = M.get_rule_param("krakenuniq", "--db")
     threads: M.T('krakenuniq_mpa_report')
@@ -1187,25 +1187,25 @@ def input_for_import_krakenuniq_taxonomy(wildcards):
     D = {}
     if M.kraken_annotation_dict:
         # if the user supplied a file with kraken annotations then use it
-        D['tsv'] = M.kraken_annotation_dict[wildcards.sample]['path']
+        D['tsv'] = M.kraken_annotation_dict[wildcards.readset]['path']
     else:
         # if the user didn't provide a file, then annotation needs to run
-        D['tsv'] = os.path.join(dirs_dict["TAXONOMY_DIR"], wildcards.sample + "-krakenuniq.tsv")
+        D['tsv'] = os.path.join(dirs_dict["TAXONOMY_DIR"], wildcards.readset + "-krakenuniq.tsv")
 
     if run_import_percent_of_reads_mapped:
         # we include percent_of_reads_mapped_imported_flag as input here so that kraken and import_percent_of_reads_mapped will never run in parallel.
         # If they run in parallel it could cause trouble as they will try to write to the profile database at the same time. very bad.
-        D['percent_of_reads_mapped_imported_flag'] = os.path.join(dirs_dict["PROFILE_DIR"], wildcards.group, wildcards.sample, "import_percent_of_reads_mapped.done"),
+        D['percent_of_reads_mapped_imported_flag'] = os.path.join(dirs_dict["PROFILE_DIR"], wildcards.group, wildcards.readset, "import_percent_of_reads_mapped.done"),
     return D
 
 
 rule import_krakenuniq_taxonomy:
     version: 1.0
-    log: dirs_dict["LOGS_DIR"] + "/{group}-{sample}-import_krakenuniq_taxonomy.log"
+    log: dirs_dict["LOGS_DIR"] + "/{group}-{readset}-import_krakenuniq_taxonomy.log"
     input:
         unpack(input_for_import_krakenuniq_taxonomy),
-        profile = ancient(os.path.join(dirs_dict["PROFILE_DIR"], "{group}", "{sample}", "PROFILE.db"))
-    output: touch(os.path.join(dirs_dict["PROFILE_DIR"], "{group}/{sample}/import_krakenuniq_taxonomy.done"))
+        profile = ancient(os.path.join(dirs_dict["PROFILE_DIR"], "{group}", "{readset}", "PROFILE.db"))
+    output: touch(os.path.join(dirs_dict["PROFILE_DIR"], "{group}/{readset}/import_krakenuniq_taxonomy.done"))
     params: min_abundance = M.get_rule_param('import_krakenuniq_taxonomy', '--min-abundance')
     threads: M.T('import_krakenuniq_taxonomy')
     resources: nodes = M.T('import_krakenuniq_taxonomy')
