Flye in metagenomics workflow

--- a/anvio/workflows/metagenomics/Snakefile
+++ b/anvio/workflows/metagenomics/Snakefile
@@ -510,6 +510,70 @@ rule gzip_fastqs:
 
 
 if run_idba_ud == True:
+if M.get_param_value_from_config(['flye', 'run']) and M.has_lr:
+    def flye_read_type():
+        flags = ["--pacbio-raw", "--pacbio-corr", "--pacbio-hifi",
+                 "--nano-raw", "--nano-corr", "--nano-hq"]
+        enabled = [f for f in flags if M.get_param_value_from_config(['flye', f])]
+        if len(enabled) == 0:
+            raise WorkflowError("flye: enable exactly one of --pacbio-raw|--pacbio-corr|--pacbio-hifi|--nano-raw|--nano-corr|--nano-hq.")
+        if len(enabled) > 1:
+            raise WorkflowError(f"flye: mutually exclusive flags enabled: {enabled}. Enable exactly one.")
+        return enabled[0]
+
+    rule flye:
+        wildcard_constraints:
+            group = LR_GRP_RE
+        version: 1.0
+        # to be seen...
+        #conda: conda_yaml('flye')   # <-- YAML path from config (used only with --use-conda)
+        log:
+            M.dirs_dict["LOGS_DIR"] + "/{group}-flye.log"
+        input:
+            reads = lambda wildcards: M.get_lr_files_for_group(wildcards.group)
+        output:
+            raw_fasta = M.dirs_dict["FASTA_DIR"] + "/{group}/final.contigs.fa"
+        params:
+            # we will see..
+            #env_prefix = lambda w: env_prefix('flye'),
+            meta = M.get_rule_param("flye", "--meta"),
+            read_type = lambda w: flye_read_type(),
+            additional_params = M.get_param_value_from_config(["flye", "additional_params"]),
+            outdir = M.dirs_dict["FASTA_DIR"] + "/{group}",
+            genome_size = M.get_rule_param("flye", "--genome-size"),
+            iterations = M.get_rule_param("flye", "--iterations"),
+            min_overlap = M.get_rule_param("flye", "--min-overlap"),
+            read_error = M.get_rule_param("flye", "--read-error"),
+            keep_haplotypes = M.get_rule_param("flye", "--keep-haplotypes"),
+            no_alt_contigs = M.get_rule_param("flye", "--no-alt-contigs"),
+            scaffold = M.get_rule_param("flye", "--scaffold"),
+            polish_target = M.get_rule_param("flye", "--polish-target"),
+        threads:
+            M.T('flye')
+        resources:
+            nodes = M.T('flye')
+        shell:
+            r"""
+            mkdir -p {params.outdir}
+
+            flye {params.meta} {params.read_type} {input.reads} \
+                 -o {params.outdir} -t {threads} \
+                 {params.genome_size} {params.iterations} {params.min_overlap} {params.read_error} \
+                 {params.keep_haplotypes} {params.no_alt_contigs} {params.scaffold} {params.polish_target} \
+                 {params.additional_params} \
+                 >> {log} 2>&1
+
+            if [ -f "{params.outdir}/assembly.fasta" ]; then
+                cp "{params.outdir}/assembly.fasta" {output.raw_fasta} && rm "{params.outdir}/assembly.fasta"
+            elif [ -f "{params.outdir}/assembly.fa" ]; then
+                cp "{params.outdir}/assembly.fa" {output.raw_fasta} && rm "{params.outdir}/assembly.fa"
+            else
+                echo "Could not find (meta)Flye assembly fasta in {params.outdir}" >> {log}
+                exit 1
+            fi
+            """
+
+
     rule idba_ud:
         wildcard_constraints:
             group = SR_GRP_RE
