--- a/anvio/workflows/metagenomics/Snakefile
+++ b/anvio/workflows/metagenomics/Snakefile
@@ -826,6 +826,44 @@ rule bowtie:
                 -S {output.sam} >> {log} 2>&1
         """
 
+
+rule minimap2_index:
+    version: 1.0
+    log:
+        dirs_dict["LOGS_DIR"] + "/{group}-minimap2_index.log"
+    wildcard_constraints:
+        readset = LR_RS_RE
+    input:
+        contigs = lambda wildcards: M.get_fasta(wildcards)
+    output:
+        idx = M.dirs_dict["MAPPING_DIR"] + "/{group}/{group}.mmi"
+    params:
+        additional_params = M.get_param_value_from_config(["minimap2_index", "additional_params"]),
+        outdir = M.dirs_dict["MAPPING_DIR"] + "/{group}"
+    shell:
+        r"""
+        mkdir -p {params.outdir}
+        minimap2 -d {output.idx} {params.additional_params} {input.contigs} >> {log} 2>&1
+        """
+
+
+rule minimap2:
+    version: 1.0
+    log: dirs_dict["LOGS_DIR"] + "/{group}-{readset}-minimap2.log"
+    wildcard_constraints:
+        readset = LR_RS_RE
+    input:
+        idx = M.dirs_dict["MAPPING_DIR"] + "/{group}/{group}.mmi",
+        reads = lambda wildcards: M.get_lr_files_for_readset(wildcards.readset)
+    output:
+        sam = M.dirs_dict["MAPPING_DIR"] + "/{group}/{readset}.sam"
+    params:
+        preset = M.get_param_value_from_config(["minimap2", "preset"]),
+        additional_params = M.get_param_value_from_config(["minimap2", "additional_params"])
+    threads: M.T("minimap2")
+    shell:
+        r"""
+        minimap2 -x {params.preset} -t {threads} -a {params.additional_params} {input.idx} {input.reads} -o {output.sam} 2>> {log}
         """
 
 
